Added HTML Rendering of Markdown Posts

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Application -->
     <script src="/app/notes.js"></script>
     <script src="/app/controllers.js"></script>
+    <script src="/marked.min.js"></script>
   </head>
   <body>
     <div class="container-fluid">
