--- a/viewer/viewer.html
+++ b/viewer/viewer.html
@@ -4,11 +4,12 @@
       <script src="http://common.melange:7776/js/melange/0.0.1"></script>
       <script src="http://common.melange:7776/js/mustache/0.8.2"></script>
       <script src="viewer.js"></script>
+      <script src="/marked.min.js"></script>
   </head>
   <body>
     <script id="template" type="x-tmpl-mustache">
       <h4>{{ components.title.string }}</h5>
-      <p>{{ components.body.string }}</p>
+      <p>{{{ components.body.html }}}</p>
     </script>
     <div id="container">
     </div>
